# crimson

./: .gitignore  Cargo.toml  Dockerfile  build_docker.sh  compose.yaml  envsource.fish  envsource.sh
prompts/: architecture_plan.md  intermediate_storage.md  llm_thoughts.md  redis_s3_code.md  tmp.md
prompts/references/: marker_api.md
src/: main.rs
src/api/: mod.rs
src/common/: mod.rs
src/docs/: mod.rs
src/logic/: local_store.rs  mod.rs  s3_stuff.rs  served_backend.rs
src/processing/: mod.rs  worker.rs
src/prompts/: llm_thoughts.md  tmp.md  tmp2.md
src/prompts/references/: aide_documentation.md  otel_export_docs.md  otel_tracing_docs.md
src/types/: mod.rs  storage.rs
