[package]
name = "crimson"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["json", "multipart"] }
pdfium-render = "0.8.31"
tokio = { version = "1.45.0", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
bytes = "1.4"
tracing = "0.1"
tracing-opentelemetry = "0.30"
opentelemetry = { version = "0.29.1", features = ["trace"] }
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic"] }
opentelemetry-stdout = "0.29.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
markdownify = "0.1.5"
aide = { version = "0.14.2", features = ["axum", "axum-json", "axum-matched-path", "axum-multipart", "axum-query", "swagger"] }
schemars = { version = "0.8.22", features = ["uuid"] }
rand = "0.9.1"
thiserror = "2.0.12"
redis = "0.31.0"
aws-sdk-s3 = "1.85.0"
aws-config = "1.6.2"
async-trait = "0.1.88"
once_cell = "1.18.0"
serde_json = "1.0.140"
lazy_static = "1.5.0"
tower-http = { version = "0.6.4", features = ["trace"] }
axum-tracing-opentelemetry = "0.28.0"
