[package]
name = "crimson"
version = "0.1.0"
edition = "2024"

[dependencies]
# General API
axum = { version = "0.8.4", features = ["json", "multipart"] }
tokio = { version = "1.45.0", features = ["full"] }
thiserror = "2.0.12"
redis = "0.31.0"
async-trait = "0.1.88"
once_cell = "1.18.0"
serde_json = "1.0.140"
lazy_static = "1.5.0"
tower-http = { version = "0.6.4", features = ["trace"] }
anyhow = "1.0.98"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.4"
# Tracing Modules
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.30"
opentelemetry = { version = "0.29.1", features = ["trace"] }
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic"] }
opentelemetry-stdout = "0.29.0"
axum-tracing-opentelemetry = "0.28.0"
init-tracing-opentelemetry = { version = "0.28.1", features = ["tracing_subscriber_ext"] }
# PDF Processing
markdownify = "0.1.5"
pdfium-render = "0.8.31"
# API Documentation
aide = { version = "0.14.2", features = ["axum", "axum-json", "axum-matched-path", "axum-multipart", "axum-query", "swagger"] }
schemars = { version = "0.8.22", features = ["uuid"] }
rand = "0.9.1"
# S3 stuff
aws-sdk-s3 = "1.85.0"
aws-config = "1.6.2"
